[package]
name = "pria"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "Rusty asset pre-processor."
homepage = "https://github.com/digitaljokerman/pria"
repository = "https://github.com/digitaljokerman/pria"
readme = "../../README.md"

[features]
image = ["dep:image", "dep:qoi"]
default = ["image"]

[dependencies]
anyhow = "1.0"
walkdir = "2"

image = { version = "0.24", optional = true, default-features = false, features = [
    "png",
    "jpeg",
] }
qoi = { version = "0.4", optional = true }

serde = { version = "1", features = ["derive"] }
ron = "0.8"
